# pyhikvision

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pyhikvision/: __init__.py  _xml.py  cli.py  client.py  exceptions.py  models.py
src/pyhikvision/isapi/: __init__.py  batch.py  client.py
src/pyhikvision/netsdk/: __init__.py
tests/: test_smoke.py
